Fixed layout issues for smaller sized windows.

--- a/roverUI/src/App.css
+++ b/roverUI/src/App.css
@@ -37,28 +37,18 @@ body, #react-app, #react-app > * {
 }
 
 #met {
-    display: flex;
     color: white;
 }
-#met > * {
-    padding: 0 5px;
+
+.time-box {
 }
 
-#met .time-box > * {
-    padding: 0 5px;
-}
-
-#met .time-box:before {
-    content: '';
-    position: absolute;
-    height: 30px;
-    width: 165px;
-    border: 1px solid white;
-    margin: 17px 0 0 -2px;
-}
-
-#met .timeBox, .controls > *{
+.time-box .value {
     margin: 0 3px;
+}
+
+.date, .formatted-time{
+    font-weight: normal !important;
 }
 
 .module {
@@ -82,11 +72,11 @@ body, #react-app, #react-app > * {
     max-width: 900px;
 }
 
-.ant-select-selection__placeholder {
+.generation-options .ant-select-selection__placeholder {
     color: darkgray;
 }
 
-.ant-select-selection__choice {
+.generation-options .ant-select-selection__choice, .generation-options .ant-select-selection__choice__remove {
     color: white;
     background: #108ee9 !important;
 }
@@ -108,8 +98,6 @@ body, #react-app, #react-app > * {
 
 #chart-panels .controls {
     margin: 0;
-    display: flex;
-    align-items: center;
 }
 
 #chart-panels .ant-layout {
@@ -125,12 +113,20 @@ body, #react-app, #react-app > * {
 
 #chart-panels .ant-layout-header {
     border-radius: 5px 5px 0 0;
+    padding: 0 15px;
+    z-index: 9999;
 }
 
 #chart-panels .ant-layout-content {
     padding-top: 20px;
 }
 
+/* Media query to hide sensor name in chart panels */
+ @media (max-width: 992px) {
+    #chart-panels .ant-tag {
+        display: none !important;
+    }
+}
 /* hotfix for the highlighting the current item selected after page refresh or page load*/
 #navMenu .ant-menu-item > a {
     position: absolute;
@@ -173,10 +169,17 @@ body, #react-app, #react-app > * {
     width: 180px;
 }
 
+.waypoints .ant-row {
+    margin: 15px 0;
+}
+
+.waypoints .map-row {
+    margin-top: 5px;
+}
+
 #map {
     width: 100%;
     height: 750px;
-    margin-top: 5px;
 }
 
 .rover-marker {
